# segmentation

./: CMakeLists.txt  baatzalgorithm.cpp  baatzalgorithm.h  boundingbox.h  main.cpp  segment.cpp  segment.h
